<resources>
    <string name="app_name">Descarte+</string>
    <string name="Card1">Encontre a data da Coleta</string>
    <string name="Card2">Localize Pontos de Coleta</string>
    <string name="embreve">Em breve</string>
    <string name="pesquisar_placeholder">Usar endereço + nº + bairro ou CEP</string>
    <string name="localizacao_atual">Usar minha localização atual</string>
    <string name="Endereco">Endereço: </string>
    <string name="Cep">cep: </string>
    <string name="SubPrefeitura">Subprefeitura: </string>

</resources>