<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="50sp"
    app:cardCornerRadius="10sp"
    app:cardBackgroundColor="@color/BackgroundColor"
    app:elevation="5sp"
    android:layout_marginBottom="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1.7"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Endereco"
                    android:textColor="@color/DarkGrey"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />

                <TextView
                    android:id="@+id/endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="endereço"
                    android:textColor="@color/DarkGrey"
                    android:textSize="15sp"
                    android:gravity="center_vertical|left"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Cep"
                    android:textColor="@color/DarkGrey"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />
                <TextView
                    android:id="@+id/cep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XXXXX-XXX"
                    android:textColor="@color/DarkGrey"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginHorizontal="15sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SubPrefeitura"
                android:textColor="@color/DarkGrey"
                android:textStyle="bold"
                android:textSize="17sp"
                />
            <TextView
                android:id="@+id/subPrefeitura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SubPrefeitura"
                android:textColor="@color/DarkGrey"
                android:textSize="15sp"
                android:gravity="center_vertical|left"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="15sp"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="top"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Comum - "
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/comum_periodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Periodo"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:gravity="center_vertical|left"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/comum_semana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Semana"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:layout_marginHorizontal="15sp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:orientation="vertical"
                android:gravity="top|end"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reciclavel - "
                        android:textColor="@color/Green"
                        android:textStyle="bold"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/reciclavel_periodo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Periodo"
                        android:textColor="@color/Green"
                        android:textSize="13sp"
                        android:gravity="center_vertical|left"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/reciclavel_semana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Semana"
                    android:textColor="@color/Green"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>