<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <GridLayout
        android:layout_below="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_margin="20sp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/BackgroundColor"
            app:cardElevation="5sp"
            app:cardCornerRadius="20sp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight= "1"
            android:layout_margin="5sp"
            android:clickable="true"
            android:focusable="true"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10sp"
            >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/icon_garbage_truck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/Card1"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/BackgroundColor"
            app:cardElevation="5sp"
            app:cardCornerRadius="20sp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight= "1"
            android:layout_margin="5sp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/icon_mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Card2"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/BackgroundColor"
            app:cardElevation="5sp"
            app:cardCornerRadius="20sp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight= "1"
            android:layout_margin="5sp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/embreve"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/BackgroundColor"
            app:cardElevation="5sp"
            app:cardCornerRadius="20sp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight= "1"
            android:layout_margin="5sp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/embreve"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/BackgroundColor"
            app:cardElevation="5sp"
            app:cardCornerRadius="20sp"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight= "1"
            android:layout_margin="5sp"
            android:clickable="true"
            android:focusable="true">>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/embreve"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/BackgroundColor"
            app:cardElevation="5sp"
            app:cardCornerRadius="20sp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight= "1"
            android:layout_margin="5sp"
            android:clickable="true"
            android:focusable="true">>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_launcher_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/embreve"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

</RelativeLayout>